# openyak

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPENYAK.md  README.md  SECURITY.md
.github/release-notes/: v0.1.0.md
.github/workflows/: ci.yml
assets/skills/: registry.json
rust/: CONTRIBUTING.md  MOCK_PARITY_HARNESS.md  OPENYAK.md  README.md  mock_parity_scenarios.json
rust/crates/api/src/: client.rs  lib.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/lsp/src/: client.rs  lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs  main.rs
rust/crates/openyak-cli/: Cargo.toml
rust/crates/openyak-cli/src/: app.rs  args.rs  init.rs  input.rs  main.rs  onboard.rs  render.rs
rust/crates/openyak-cli/tests/: command_surface_cli_smoke.rs  doctor_cli_smoke.rs  mock_parity_harness.rs  onboard_cli_smoke.rs  package_release_cli_smoke.rs  server_cli_smoke.rs
rust/crates/openyak-cli/tests/common/: mod.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  bash_validation.rs  bootstrap.rs  compact.rs  config.rs  conversation.rs  date.rs  file_ops.rs  hooks.rs  lib.rs  lifecycle.rs  lsp_client.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  paths.rs  permission_enforcer.rs  permissions.rs  process.rs  prompt.rs  remote.rs  sandbox.rs  session.rs  skill_registry.rs  skills.rs  task_registry.rs  team_cron_registry.rs  tool_profile.rs  usage.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: lib.rs  state_store.rs
rust/crates/server/tests/fixtures/: threads_protocol_v1.json
rust/crates/tools/src/: lib.rs
rust/docs/: oauth.settings.loopback.template.json  oauth.settings.manual-redirect.template.json  parity-foundation-registries.md
rust/docs/releases/: 0.1.0.md
rust/scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: async_create_and_run.py  create_and_run.py  user_input_roundtrip.py
sdk/python/src/openyak_sdk/: __init__.py  _client.py  _errors.py  _models.py  _sse.py
sdk/python/tests/: conftest.py  test_integration.py  test_protocol.py
sdk/python/tests/helpers/: harness.py  httpx_mocks.py
sdk/typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/examples/: create-and-run.ts  user-input-roundtrip.ts
sdk/typescript/src/: client.ts  errors.ts  index.ts  types.ts
sdk/typescript/test/: integration.test.ts  protocol.test.ts
sdk/typescript/test/helpers/: fetch.ts  harness.ts
src/: __init__.py  context.py  main.py  parity_audit.py  session_store.py
src/reference_data/: archive_surface_snapshot.json  commands_snapshot.json  tools_snapshot.json
src/reference_data/subsystems/: components.json  services.json  skills.json  types.json
tests/: test_porting_workspace.py
(+3 files in other folders)
