[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openyak-python-sdk-alpha"
version = "0.0.0a1"
description = "Attach-first Python SDK alpha for the local openyak /v1/threads protocol."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openyak_sdk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
mypy_path = "src"
files = ["src/openyak_sdk"]
explicit_package_bases = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
