[package]
name = "openyak-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "openyak"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
server = { path = "../server" }
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["net", "rt-multi-thread", "time"] }
tools = { path = "../tools" }

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
