[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-stream = "0.3"
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tools = { path = "../tools" }

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[lints]
workspace = true
